CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar UNIQUE,
  "password_hash" varchar,
  "user_name" varchar UNIQUE,
  "status" varchar,
  "role" varchar,
  "avatar_url" varchar,
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP,
  "updated_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "global_profiles" (
  "user_id" integer PRIMARY KEY,
  "full_name" varchar,
  "phone" varchar,
  "bio" text,
  "dob" date,
  "gender" varchar,
  "settings" json,
  "updated_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "global_identity_verifications" (
  "user_id" integer PRIMARY KEY,
  "citizen_id" varchar UNIQUE,
  "extracted_data" json,
  "verified_at" timestamp,
  "provider" varchar
);

CREATE TABLE "organizations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "slug" varchar UNIQUE,
  "logo_url" varchar,
  "brand_config" json,
  "features_config" json,
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "organization_members" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "user_id" integer,
  "verification_level" integer DEFAULT 0,
  "is_trusted_verifier" boolean DEFAULT false,
  "status" varchar DEFAULT 'active',
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP,
  "updated_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "academic_records" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" integer,
  "student_code" varchar,
  "degree_type" varchar,
  "class_name" varchar,
  "start_year" integer,
  "graduated_year" integer,
  "status" varchar
);

CREATE TABLE "peer_verifications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "target_member_id" integer,
  "verifier_member_id" integer,
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "verification_requests" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" integer,
  "document_url" varchar,
  "document_type" varchar,
  "status" varchar,
  "admin_note" text,
  "reviewed_by_member_id" integer,
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP,
  "updated_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "events" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "creator_member_id" integer,
  "title" varchar,
  "description" text,
  "banner_url" varchar,
  "location" varchar,
  "start_time" timestamp,
  "end_time" timestamp,
  "registration_start_at" timestamp,
  "registration_end_at" timestamp,
  "max_capacity" integer,
  "interested_count" integer DEFAULT 0,
  "is_published" boolean DEFAULT false,
  "created_at" timestamp
);

CREATE TABLE "event_interests" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "event_id" integer,
  "member_id" integer,
  "created_at" timestamp
);

CREATE TABLE "event_tickets" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "event_id" integer,
  "member_id" integer,
  "guest_name" varchar,
  "guest_email" varchar,
  "guest_phone" varchar,
  "ticket_code" varchar UNIQUE,
  "status" varchar,
  "registered_at" timestamp,
  "checked_in_at" timestamp
);

CREATE TABLE "mentor_profiles" (
  "member_id" integer PRIMARY KEY,
  "current_job_title" varchar,
  "current_company" varchar,
  "bio" text,
  "rating_avg" decimal DEFAULT 0,
  "total_sessions" integer DEFAULT 0,
  "is_approved" boolean DEFAULT false,
  "created_at" timestamp
);

CREATE TABLE "mentor_expertise" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mentor_member_id" integer,
  "topic" varchar,
  "years_experience" integer,
  "description" text
);

CREATE TABLE "mentor_availabilities" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mentor_member_id" integer,
  "start_time" timestamp,
  "end_time" timestamp,
  "status" varchar DEFAULT 'Available'
);

CREATE TABLE "mentorship_sessions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "availability_id" integer,
  "mentee_member_id" integer,
  "status" varchar,
  "booking_note" text,
  "meeting_link" varchar,
  "created_at" timestamp
);

CREATE TABLE "session_feedbacks" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "session_id" integer,
  "mentee_member_id" integer,
  "rating" integer,
  "comment" text,
  "is_public" boolean,
  "created_at" timestamp
);

CREATE TABLE "news" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "author_member_id" integer,
  "title" varchar,
  "slug" varchar,
  "content" text,
  "thumbnail_url" varchar,
  "is_hidden" boolean,
  "published_at" timestamp
);

CREATE TABLE "saved_items" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" integer,
  "item_type" varchar,
  "item_id" integer,
  "note" text,
  "saved_at" timestamp
);

CREATE TABLE "achievements" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" integer,
  "title" varchar,
  "description" text,
  "image_url" varchar,
  "awarded_date" date,
  "status" varchar
);

CREATE TABLE "jobs" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "poster_member_id" integer,
  "is_referral" boolean DEFAULT false,
  "type" varchar,
  "title" varchar,
  "company_name" varchar,
  "location" varchar,
  "salary_range" varchar,
  "description" text,
  "how_to_apply" text,
  "deadline" date,
  "is_active" boolean,
  "created_at" timestamp
);

CREATE TABLE "learning_resources" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "uploader_member_id" integer,
  "title" varchar,
  "type" varchar,
  "link_url" varchar,
  "description" text,
  "created_at" timestamp
);

CREATE TABLE "funds" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "manager_member_id" integer,
  "name" varchar,
  "description" text,
  "target_amount" decimal,
  "current_amount" decimal,
  "status" varchar
);

CREATE TABLE "fund_receiving_infos" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "fund_id" integer,
  "type" varchar,
  "account_number" varchar,
  "account_name" varchar,
  "bank_name" varchar,
  "qr_code_url" varchar,
  "is_active" boolean
);

CREATE TABLE "fund_donations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "fund_id" integer,
  "donor_member_id" integer,
  "donor_name" varchar,
  "amount" decimal,
  "message" text,
  "proof_image_url" varchar,
  "status" varchar,
  "created_at" timestamp
);

CREATE TABLE "fund_expenses" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "fund_id" integer,
  "title" varchar,
  "amount" decimal,
  "expense_date" date,
  "proof_document_url" varchar,
  "created_at" timestamp
);

CREATE TABLE "notifications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" integer,
  "title" varchar,
  "message" text,
  "target_url" varchar,
  "is_read" boolean,
  "created_at" timestamp
);

CREATE TABLE "forum_categories" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "parent_id" integer DEFAULT NULL,
  "organization_id" integer,
  "name" varchar,
  "description" text,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "forum_topics" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization_id" integer,
  "title" varchar,
  "created_by_member_id" integer,
  "category_id" integer, 
  "view_count" integer DEFAULT 0,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "forum_posts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "topic_id" integer,
  "author_member_id" integer,
  "content" text,
  "answer_to_post_id" integer,
  "is_banned" boolean DEFAULT false,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "chat_groups" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "type" varchar NOT NULL,                -- 'PRIVATE' hoặc 'GROUP'
  "title" varchar,                        -- tên group (null với PRIVATE)
  "created_by" integer NOT NULL,
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP,
  "updated_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "chat_group_members" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "group_id" integer NOT NULL,
  "member_id" integer NOT NULL,
  "role" varchar DEFAULT 'member',     -- 'owner' / 'admin' / 'member'
  "joined_at" timestamp DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE "chat_messages" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "group_id" integer NOT NULL,
  "sender_member_id" integer NOT NULL,
  "content" text NOT NULL, -- an url
  "message_type" varchar DEFAULT 'TEXT', -- TEXT / IMAGE / FILE...
  "metadata" JSONB,                       -- optional, lưu info file, reaction...
  "created_at" timestamp DEFAULT CURRENT_TIMESTAMP,
  "edited_at" timestamp,
  "deleted_at" timestamp
);

CREATE UNIQUE INDEX ON "organization_members" ("organization_id", "user_id");

CREATE UNIQUE INDEX ON "peer_verifications" ("target_member_id", "verifier_member_id");

CREATE UNIQUE INDEX ON "event_interests" ("event_id", "member_id");

CREATE UNIQUE INDEX ON "saved_items" ("member_id", "item_type", "item_id");

ALTER TABLE "global_profiles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "global_identity_verifications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "organization_members" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "organization_members" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "academic_records" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "peer_verifications" ADD FOREIGN KEY ("target_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "peer_verifications" ADD FOREIGN KEY ("verifier_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "verification_requests" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "verification_requests" ADD FOREIGN KEY ("reviewed_by_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "events" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "events" ADD FOREIGN KEY ("creator_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "event_interests" ADD FOREIGN KEY ("event_id") REFERENCES "events" ("id");

ALTER TABLE "event_interests" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "event_tickets" ADD FOREIGN KEY ("event_id") REFERENCES "events" ("id");

ALTER TABLE "event_tickets" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "mentor_profiles" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "mentor_expertise" ADD FOREIGN KEY ("mentor_member_id") REFERENCES "mentor_profiles" ("member_id");

ALTER TABLE "mentor_availabilities" ADD FOREIGN KEY ("mentor_member_id") REFERENCES "mentor_profiles" ("member_id");

ALTER TABLE "mentorship_sessions" ADD FOREIGN KEY ("availability_id") REFERENCES "mentor_availabilities" ("id");

ALTER TABLE "mentorship_sessions" ADD FOREIGN KEY ("mentee_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "session_feedbacks" ADD FOREIGN KEY ("session_id") REFERENCES "mentorship_sessions" ("id");

ALTER TABLE "session_feedbacks" ADD FOREIGN KEY ("mentee_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "news" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "news" ADD FOREIGN KEY ("author_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "saved_items" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "achievements" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "jobs" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "jobs" ADD FOREIGN KEY ("poster_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "learning_resources" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "learning_resources" ADD FOREIGN KEY ("uploader_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "funds" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "funds" ADD FOREIGN KEY ("manager_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "fund_receiving_infos" ADD FOREIGN KEY ("fund_id") REFERENCES "funds" ("id");

ALTER TABLE "fund_donations" ADD FOREIGN KEY ("fund_id") REFERENCES "funds" ("id");

ALTER TABLE "fund_donations" ADD FOREIGN KEY ("donor_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "fund_expenses" ADD FOREIGN KEY ("fund_id") REFERENCES "funds" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "forum_topics" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "forum_topics" ADD FOREIGN KEY ("created_by_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "forum_posts" ADD FOREIGN KEY ("topic_id") REFERENCES "forum_topics" ("id");

ALTER TABLE "forum_posts" ADD FOREIGN KEY ("author_member_id") REFERENCES "organization_members" ("id");

ALTER TABLE "forum_posts" ADD FOREIGN KEY ("answer_to_post_id") REFERENCES "forum_posts" ("id");

ALTER TABLE "forum_categories" ADD FOREIGN KEY ("organization_id") REFERENCES "organizations" ("id");

ALTER TABLE "forum_topics" ADD FOREIGN KEY ("category_id") REFERENCES "forum_categories" ("id");

